syntax = "proto3";

package zeropod.shim.v1;
option go_package = "github.com/ctrox/zeropod/api/shim/v1/;v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Shim {
	rpc Metrics(MetricsRequest) returns (MetricsResponse);
	rpc GetStatus(ContainerRequest) returns (ContainerStatus);
	rpc SubscribeStatus(SubscribeStatusRequest) returns (stream ContainerStatus);
}

message MetricsRequest {
	google.protobuf.Empty empty = 1;
}

message SubscribeStatusRequest {
	google.protobuf.Empty empty = 1;
}

message MetricsResponse {
	repeated ContainerMetrics metrics = 1;
}

message ContainerRequest {
	string id = 1;
}

enum ContainerPhase {
  SCALED_DOWN = 0;
  RUNNING = 1;
  STOPPING = 2;
}

message ContainerStatus {
	string id = 1;
	string name = 2;
	string pod_name = 3;
	string pod_namespace = 4;
	ContainerPhase phase = 5;
	google.protobuf.Timestamp event_time = 6;
	google.protobuf.Duration event_duration = 7;
}

message ContainerMetrics {
    string name = 1;
	string pod_name = 2;
	string pod_namespace = 3;
    google.protobuf.Timestamp lastCheckpoint = 4;
    google.protobuf.Timestamp lastRestore = 5;
    google.protobuf.Duration lastCheckpointDuration = 6;
    google.protobuf.Duration lastRestoreDuration = 7;
    bool running = 8;
}
